                        reserved.
$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of Open MPI since
version 1.0.

Trunk (not on release branches yet)
-----------------------------------

-Convert the C++ Comm, Datatype and Winn keyval creation and intercept callbacks
  to *not* use the STL as well as removing the STL use from the error handler
  routines.  This was removing the STL from the C++ bindings (Solaris has 2
  versions of the STL; if OMPI uses one and an MPI application wants to use
  another, Bad Things happen).

  The main idea is to wrap up the C++ callback function pointers and the user's
  extra_state into our own struct that is passed as the extra_state to the C
  keyval registration along with the intercept routines in intercepts.cc. When the
  C++ intercepts are activated, they unwrap the user's callback and extra state
  and call them.

- Added Cray Compute Node Linux (CNL) and ALPS Support.
  --> Expected: ???
- Added Microsoft Windows support.  See README.WINDOWS file for
  details.
  --> Expected: ???
- Addition of "dr" (data reliability) PML.
  --> Expected: ???
- Added threaded progress for the openib BTL (waiting on other
  threading support)
  --> Expected: ???

- Added the Sparse Groups implementation.
  --> Expected: 1.3
- Added support for Platform/LSF job launchers.  Must be Platform LSF
  v7.0.2 or later.
  --> Expected 1.3
- Updated ROMIO with the version from MPICH2 1.0.5p4
  --> Expected: 1.3
- Add RDMA capable one-sided component (called rdma), which
  can be used with BTL components that expose a full one-sided
  interface.
  --> Expected: 1.3
- Added btl_openib_if_[in|ex]clude MCA parameters for
  including/excluding comma-delimited lists of HCAs and ports.
  --> Expected: 1.3